[gd_scene load_steps=14 format=3 uid="uid://b6c3m0c3v3s3h"]

[ext_resource type="PackedScene" uid="uid://hduagr0wpg6q" path="res://scenes/Player.tscn" id="1_player"]
[ext_resource type="PackedScene" uid="uid://c6caykwhfyvdc" path="res://scenes/Platform.tscn" id="2_platform"]
[ext_resource type="Script" uid="uid://bafr11p2lsdw" path="res://scripts/Main.gd" id="3_main"]
[ext_resource type="Script" uid="uid://di5521wlkrqer" path="res://scripts/PlatformSpawner.gd" id="4_spawner"]
[ext_resource type="Texture2D" uid="uid://ccjbpgebg1dps" path="res://assets/images/background.png" id="5_bg"]
[ext_resource type="Script" uid="uid://biq3ud5qih86m" path="res://scripts/KillZone.gd" id="6_c01mt"]
[ext_resource type="Script" uid="uid://bf4cs4tx6xled" path="res://scripts/HUD.gd" id="6_nxtc6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.65)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_top"]
size = Vector2(1020, 38.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bottom"]
size = Vector2(1020, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_left"]
size = Vector2(69, 1141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_right"]
size = Vector2(63, 1144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxtc6"]
size = Vector2(982, 20)

[node name="Main" type="Node2D"]
script = ExtResource("3_main")

[node name="Player" parent="." instance=ExtResource("1_player")]
position = Vector2(640, 360)
collision_mask = 6

[node name="Platforms" type="Node2D" parent="."]

[node name="PlatformSpawner" type="Node2D" parent="."]
script = ExtResource("4_spawner")
platform_scene = ExtResource("2_platform")
platforms_container_path = NodePath("../Platforms")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_bg")
stretch_mode = 4

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3
layer = 0
script = ExtResource("6_nxtc6")

[node name="TopLeft" type="MarginContainer" parent="HUD"]
offset_left = 12.0
offset_top = 12.0
offset_right = 300.0
offset_bottom = 60.0

[node name="HealthLabel" type="Label" parent="HUD/TopLeft"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Health: 0 / 0"

[node name="Coins" type="Label" parent="HUD/TopLeft"]
layout_mode = 2
text = "Coins: 0"

[node name="GameOver" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD/GameOver"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBox" type="VBoxContainer" parent="HUD/GameOver/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
alignment = 1

[node name="Title" type="Label" parent="HUD/GameOver/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Game Over"
horizontal_alignment = 1

[node name="CoinsResult" type="Label" parent="HUD/GameOver/Panel/VBox"]
layout_mode = 2
text = "Coins collected: 0"
horizontal_alignment = 1

[node name="Hint" type="Label" parent="HUD/GameOver/Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Press RESTART to try again."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="HBoxContainer" parent="HUD/GameOver/Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="Restart" type="Button" parent="HUD/GameOver/Panel/VBox/Buttons"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="HUD/GameOver/Panel/VBox/Buttons"]
layout_mode = 2
text = "Quit"

[node name="WallTop" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2(513, 47)
shape = SubResource("RectangleShape2D_top")

[node name="WallBottom" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2(509, 1251)
shape = SubResource("RectangleShape2D_bottom")

[node name="WallLeft" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2(24.5, 570.5)
shape = SubResource("RectangleShape2D_left")

[node name="WallRigth" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRigth"]
position = Vector2(998.5, 572)
shape = SubResource("RectangleShape2D_right")

[node name="KillZone" type="Area2D" parent="."]
script = ExtResource("6_c01mt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(483, 1153)
shape = SubResource("RectangleShape2D_nxtc6")

[connection signal="pressed" from="HUD/GameOver/Panel/VBox/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HUD/GameOver/Panel/VBox/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="body_entered" from="KillZone" to="KillZone" method="_on_body_entered"]
